--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
+    <img class="pull-left" src="http://barcampchs.org/sites/all/themes/barcampchs/logo.png" />
+    <div class="hero-unit">
+      <h1></h1>
+    </div>
     <div ng-app="barcampchs" class="container">
       <ng-view></ng-view>
     </div>
@@ -15,5 +19,9 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
     <script src="/app/scripts/app.js"></script>
     <script src="/app/scripts/controllers/index.js"></script>
+    <script src="/app/scripts/controllers/newSession.js"></script>
+    <script src="/app/scripts/controllers/vote.js"></script>
+    <script src="/app/scripts/controllers/editSession.js"></script>
+
   </body>
 </html>
