--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
     <script src="/app/scripts/app.js"></script>
+    <script src="/app/scripts/services/session.js"></script>
     <script src="/app/scripts/controllers/index.js"></script>
     <script src="/app/scripts/controllers/newSession.js"></script>
     <script src="/app/scripts/controllers/vote.js"></script>
