--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular-resource.min.js"></script>
     <script src="/app/scripts/app.js"></script>
     <script src="/app/scripts/services/session.js"></script>
     <script src="/app/scripts/controllers/index.js"></script>
