--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,10 @@
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular-resource.min.js"></script>
+    <script src="/app/scripts/vendor/mongolabresource.js"></script>
     <script src="/app/scripts/app.js"></script>
     <script src="/app/scripts/services/session.js"></script>
+    <script src="/app/scripts/services/user.js"></script>
     <script src="/app/scripts/controllers/index.js"></script>
     <script src="/app/scripts/controllers/newSession.js"></script>
     <script src="/app/scripts/controllers/vote.js"></script>
